--- a/src/main/resources/templates/code.html
+++ b/src/main/resources/templates/code.html
@@ -76,7 +76,7 @@
                             <li><a href="/publish?area=sharing" >资源共享</a></li>
                         </ul>
                     </li>
-                    <li><a href="/profile/replies">通知<span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span></a></li>
+                    <li><a href="/profile/replies"><span class="glyphicon glyphicon-bell"><span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span></a></li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
