--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -76,7 +76,7 @@
                             <li><a href="/publish?area=sharing" >资源共享</a></li>
                         </ul>
                     </li>
-                    <li><a href="/profile/replies">通知<span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span></a></li>
+                    <li><a href="/profile/replies"><span class="glyphicon glyphicon-bell"><span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span></a></li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
@@ -117,7 +117,7 @@
                         <a th:if="${session.user != null && session.user.grade >= recommend.limitation}" th:href="@{'/recommend/' + ${recommend.id}}" th:text="${recommend.title}"></a>
                         <span th:if="${session.user == null || session.user.grade < recommend.limitation}" th:text="${recommend.title}"></span>
                         <a th:if="${session.user != null && session.user.id == 1}">|<span class="glyphicon glyphicon-trash" th:data-id="${recommend.id}"
-                                                                   onclick="deleteRecommend(this)"></span></a>
+                                                                                          onclick="deleteRecommend(this)"></span></a>
                     </h4>
                     <span style="font-size: 12px;font-weight: normal;color: #999">
                         <span th:text="${recommend.viewCount}"></span>次浏览 ·
