--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -118,5 +118,6 @@
                                     href="javascript:click()" role="button"
                                     style="align: center;">回到主页</a></p>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
