--- a/src/main/resources/templates/campus.html
+++ b/src/main/resources/templates/campus.html
@@ -90,9 +90,8 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <a href="https://github.com/login/oauth/authorize?client_id=8001a245cc2ff9985a75&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                        <a href="/">登录</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -178,5 +177,6 @@
         </div>
     </div>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
