修复登录问题

--- a/src/main/resources/templates/code.html
+++ b/src/main/resources/templates/code.html
@@ -90,7 +90,7 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <a href="/">登录</a>
+                        <a href="/login">登录</a>
                     </li>
 
                 </ul>
