--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -72,7 +72,7 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <a href="/">登录</a>
+                        <a href="/login">登录</a>
                     </li>
 
                 </ul>
