--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <a th:href="@{'https://github.com/login/oauth/authorize?client_id=8001a245cc2ff9985a75&redirect_uri=' + ${#httpServletRequest.getRequestURL()}+ 'callback&scope=user&state=1'}">登录</a>
+                        <a href="/login">登录</a>
                     </li>
 
                 </ul>
