--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -57,13 +57,26 @@
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'information'}">
                 <u1>
-                    <h4 th:text="${'用户名:' + user.name}"></h4>
-                    <span style="font-size: 30px">头像:</span>
-                    <img th:src="${user.avatarUrl}" style="height: 50px; width: 50px">
+                    <h4 th:text="${'用户名:' + session.user.name}"></h4>
+                    <form action="/image" method="post" enctype="multipart/form-data">
+                        <span style="font-size: 30px">头像:</span>
+                        <img th:src="${session.user.avatarUrl}" style="height: 50px; width: 50px">
+                        <input type="file" id="uploadImg" name="uploadImg">
+                        <button type="submit">更改头像</button>
+                    </form>
+
                     <br>
-                    <h3><span th:text="${'等级：' + user.grade}"></span></h3>
-                    <h3><span th:text="${'经验值:' + user.empiricalValue}"></span></h3>
-                    <button class="btn btn-success">修改密码</button>
+                    <h3><span th:text="${'等级：' + session.user.grade}"></span></h3>
+                    <h3><span th:text="${'经验值:' + session.user.empiricalValue}"></span></h3>
+                    <form action="/password" method="post">
+                        <label for="oldPassword">用户名:</label>
+                        <input type="password" class="form-control" id="oldPassword" name="oldPassword"  placeholder="原密码">
+                        <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
+                        <label for="newPassword">密码:</label>
+                        <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="新密码">
+                        <button type="submit" class="btn btn-success">修改密码</button>
+                    </form>
+
                 </u1>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies' || section == 'questions'}">
